--- a/package.json
+++ b/package.json
@@ -3,9 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.3.1",
+    "convert-units": "^2.3.4",
+    "flexbox-react": "^4.4.0",
+    "lodash.topairs": "^4.3.0",
+    "moment": "^2.24.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-flexbox-grid": "^2.1.2",
+    "react-redux": "^7.1.0",
+    "react-scripts": "3.0.1",
+    "react-weathericons": "^1.0.4",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
